<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	<scm>
		<connection>https://gitee.com/thanks_studio/square-boot-starter.git</connection>
		<developerConnection>https://gitee.com/thanks_studio/square-boot-starter.git</developerConnection>
		<url>https://gitee.com/thanks_studio/square-boot-starter.git</url>
	</scm>
	
	<developers>
		<developer>
			<id>mr.sanq</id>
			<name>俗世游子</name>
			<email>xiezhyan@126.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>
	
	<groupId>top.zopx</groupId>
	<artifactId>goku-framework</artifactId>
	<version>1.5.0.220601</version>
	<packaging>pom</packaging>
	<url>https://gitee.com/thanks_studio/square-boot-starter.git</url>
	
	<description>${project.artifactId}快速开发架构，够快才够酷</description>
	<name>${groupId}:${artifactId}:${version}</name>
	
	<modules>
		<module>goku-framework-dependency</module>
		<module>goku-framework-tools</module>
		<module>goku-framework-socket</module>
		<module>goku-framework-starter</module>
	</modules>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		
		<goku.version>1.5.0.220601</goku.version>
		
		<spring.boot.version>2.6.4</spring.boot.version>
		<spring.cloud.version>2021.0.1</spring.cloud.version>
		<spring.cloud.alibaba.version>2021.0.1.0</spring.cloud.alibaba.version>
		
		<mybatis.plus.version>3.5.1</mybatis.plus.version>
		<mybatis.plus.dynamic.version>3.5.1</mybatis.plus.dynamic.version>
		<mysql.version>8.0.22</mysql.version>
		<collections.version>4.4</collections.version>
		
		<junit.version>4.12</junit.version>
		
		<lang3.version>3.12.0</lang3.version>
		<pool2.version>2.11.1</pool2.version>
		<codec.version>1.15</codec.version>
		
		<curator.version>5.2.1</curator.version>
		<zookeeper.version>3.8.0</zookeeper.version>
		
		<validator.version>7.0.4.Final</validator.version>
		
		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
	</properties>
	
	<profiles>
		<profile>
			<id>develop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<finalName>${project.artifactId}-${version}</finalName>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<includes>
							<include>**/*.*</include>
							<include>**/**.*</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.10.1</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<encoding>UTF-8</encoding>
							<annotationProcessorPaths>
								<path>
									<groupId>org.mapstruct</groupId>
									<artifactId>mapstruct-processor</artifactId>
									<version>${org.mapstruct.version}</version>
								</path>
								
								<path>
									<groupId>org.springframework.boot</groupId>
									<artifactId>spring-boot-configuration-processor</artifactId>
									<version>${spring.boot.version}</version>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>feature</id>
			<build>
				<finalName>${project.artifactId}-${version}</finalName>
				<resources>
					<resource>
						<directory>src/main/resources</directory>
						<includes>
							<include>**/*.*</include>
							<include>**/**.*</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.10.1</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<encoding>UTF-8</encoding>
							<annotationProcessorPaths>
								<path>
									<groupId>org.mapstruct</groupId>
									<artifactId>mapstruct-processor</artifactId>
									<version>${org.mapstruct.version}</version>
								</path>
								
								<path>
									<groupId>org.springframework.boot</groupId>
									<artifactId>spring-boot-configuration-processor</artifactId>
									<version>${spring.boot.version}</version>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</plugin>
					<!-- 以下都为上传jar默认配置不做修改 -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.12</version>
						<!-- autoReleaseAfterClose的值为true，则脚本会自动完成在平台上close、release的操作，至此你将成功发布了 -->
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh_sonatype</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.3.2</version>
						<configuration>
							<!-- 解决控制台乱码 -->
							<charset>UTF-8</charset>
							<encoding>UTF-8</encoding>
							<docencoding>UTF-8</docencoding>
							<failOnError>false</failOnError>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh_sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>ossrh_sonatype</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>